pom.xml was optimized